--- a/Superhero-Modal/index.html
+++ b/Superhero-Modal/index.html
@@ -41,13 +41,13 @@
         <p>
             Dr. Reed Richards is a scientist and inventor, better known as Mister Fantastic, who has been considered the
             smartest
-            man on Earth.[16] He is a polymath with mastery of all the sciences including; electrical, mechanical, aerospace
+            man on Earth. He is a polymath with mastery of all the sciences including; electrical, mechanical, aerospace
             engineering, electronics, chemistry, physics, biology and beyond. Richards was exposed to high levels of cosmic
             radiation along with his best friend Ben Grimm, then girlfriend Sue Storm and her younger brother Johnny Storm,
             during a
             trip to space in the stolen rocket, the Marvel-1. The radiation mutated him and his friends, allowing him to stretch
             and
-            mold his body at will.[18] Together they became the Fantastic Four, a team of adventurers who explored space, time
+            mold his body at will.Together they became the Fantastic Four, a team of adventurers who explored space, time
             and
             alternate dimensions and saved the world along the way from science-based threats.
         </p>
